--- a/package.json
+++ b/package.json
@@ -6,17 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
+    "@prisma/client": "^6.10.1",
+    "js-cookie": "^3.0.5",
+    "next": "14.2.3",
+    "nextjs-toploader": "^3.8.16",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-drag-drop-files": "^3.0.1",
+    "sweetalert2": "^11.22.1",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "postcss": "^8",
+    "prisma": "^6.10.1",
+    "tailwindcss": "^3.4.1"
   }
 }
