change: env & prisma db connetion from mysql to postgresql

--- a/.env
+++ b/.env
@@ -21,4 +21,5 @@ NEXT_PUBLIC_ADMIN_PASSWORD='12345'
 
 # This was inserted by `prisma init`:
 [object Promise]
-DATABASE_URL="mysql://root:@localhost:3306/pengujian_perangkat_lunak"
+# DATABASE_URL="mysql://root:@localhost:3306/pengujian_perangkat_lunak"
+POSTGRES_URL="postgres://postgres.zrlmlkdtuawpbynvubiv:oAL7r6jFyGTmuEuS@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
